# Messenger-Application-C--QT6-

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/forms/: authwindow.ui  groupwidget.ui  groupwidget.ui~RF6c061d.TMP  groupwidget.ui~RF6c1cd1.TMP  mainwindow.ui  mainwindow.ui.autosave~RF10e4c4a.TMP  mainwindow.ui.autosave~RF2e202bd8.TMP  mainwindow.ui.autosave~RF2e4df325.TMP  mainwindow.ui.autosave~RF2e7bb997.TMP  mainwindow.ui.autosave~RF2e897537.TMP  mainwindow.ui.autosave~RF325d6402.TMP  mainwindow.ui.autosave~RF326b1fa2.TMP  mainwindow.ui.autosave~RF32a20e12.TMP  mainwindow.ui.autosave~RF32a6a211.TMP  mainwindow.ui.autosave~RF32b8f172.TMP  mainwindow.ui~RF2819f851.TMP  mainwindow.ui~RF281ce71c.TMP  mainwindow.ui~RF2824ed5f.TMP  mainwindow.ui~RF282a7ad1.TMP  mainwindow.ui~RF282c56f4.TMP  mainwindow.ui~RF282ca572.TMP  mainwindow.ui~RF283439b1.TMP  mainwindow.ui~RF2836461b.TMP  mainwindow.ui~RF2837e4a8.TMP  mainwindow.ui~RF28411707.TMP  mainwindow.ui~RF28467914.TMP  mainwindow.ui~RF2848a29b.TMP  mainwindow.ui~RF284a0f4a.TMP  mainwindow.ui~RF2980d3cf.TMP  mainwindow.ui~RF29814611.TMP  mainwindow.ui~RF2e14b17d.TMP  mainwindow.ui~RF2e171e57.TMP  mainwindow.ui~RF2e241494.TMP  mainwindow.ui~RF2e24b98e.TMP  mainwindow.ui~RF2e2a8496.TMP  mainwindow.ui~RF2e31e3db.TMP  mainwindow.ui~RF2e334ed5.TMP  mainwindow.ui~RF2e3752f8.TMP  mainwindow.ui~RF2e3c7d7a.TMP  mainwindow.ui~RF2e420a70.TMP  (+92 more)
client/include/: authwindow.h  callremote.h  groupwidget.h  mainwindow.h  messagewidget.h  serverqueries.h  settingsform.h
client/src/: callremote.cpp  serverqueries.cpp  settingsform.cpp
client/src/authWindow/: authwindow.cpp
client/src/mainWindow/: groupwidget.cpp  main.cpp  mainwindow.cpp  messagewidget.cpp
server/: CMakeLists.txt  servercfg.json
server/include/: callremote.h  database.h  server.h  server_cfg.h  user.h
server/src/: callremote.cpp  database.cpp  main.cpp  server.cpp  server_cfg.cpp  user.cpp
